# RAG-Hackathon

./: .gitignore  .npmignore
.claude/: settings.local.json
.specify/memory/: constitution.md
Backend/: llm_config.py  main.py  pyproject.toml  requirements.txt  vercel.json
Backend/auth/: auth.py  db.py
Backend/qdrant/: dependencies.txt  qdrant-embedding.py  qdrant_retrieval.py
Frontend/: .npmignore  docusaurus.config.ts  package-lock.json  package.json
Frontend/docs/chapter-1-physical-ai/: 01-what-is-physical-ai.md  02-embodiment.md  03-sensorimotor-intelligence.md  04-physics-aware-reasoning.md  05-humanoid-sensors.md  06-robotic-control-loops.md  07-modern-humanoids.md  08-perception-planning-action-loop.md  09-terminology.md  10-learning-outcomes.md  index.md
Frontend/docs/chapter-2-robotic-nervous-system/: index.md  (+8 more)
specs/000-Docusaurus-Setup/: spec.md  tasks.md
specs/001-chapter-1-physical-ai-embodied-intelligence/: plan.md  spec.md  tasks.md
specs/002-RAG-ChatBot-UI/: spec.md
specs/002-ros2-nervous-system/: plan.md  spec.md  tasks.md
specs/003-the-digital-twin/: plan.md  spec.md  tasks.md
specs/004-urdu-translation/: plan.md  tasks.md
specs/005-RAG-ChatBot-UI/: plan.md  tasks.md
specs/007-Qdrant-Embedding/: plan.md  spec.md  tasks.md
specs/008-Qdrant-Retrieval/: plan.md  spec.md  tasks.md
specs/009-Auth-Frontend/: plan.md  spec.md  tasks.md
specs/010-Auth-Backend/: plan.md  spec.md  tasks.md
specs/012-create-own-translation-api/: plan.md  spec.md  tasks.md
specs/013-searchbar/: plan.md  spec.md  tasks.md
(+62 files in other folders)
